dev/jwindmiller/slurm-17548763.out
  File "009_ContourL_Reanalysis_CWV.py", line 20
    009
      ^
SyntaxError: invalid token
 
Batch Job Summary Report for Job "wrap" (17548763) on daint
-----------------------------------------------------------------------------------------------------
             Submit            Eligible               Start                 End    Elapsed  Timelimit 
------------------- ------------------- ------------------- ------------------- ---------- ---------- 
2019-10-18T17:55:00 2019-10-18T17:55:00 2019-10-18T18:54:18 2019-10-18T18:55:01   00:00:43   00:30:00 
-----------------------------------------------------------------------------------------------------
Username    Account     Partition   NNodes   Energy
----------  ----------  ----------  ------  --------------
jwindmil    s916        normal           1        0 joules
 
This job did not utilize any GPUs
 
----------------------------------------------------------
Scratch File System        Files       Quota
--------------------  ----------  ----------
/scratch/snx3000               7     1000000
 
